quelques autres essais

--- a/mystyles.css
+++ b/mystyles.css
@@ -5,3 +5,17 @@
 .div:hover {
     width: 300px;
 }
+
+.centered {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: black;
+    
+    .background {
+        background: 
+            url('pont-alex3.jpeg')
+            bottom center no-repeat,
+        
+    }
