--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,8 +1,9 @@
 .full_bg {
   /* border:2em;
   padding:2em; */
-  height: 100vh;
-  background-size: cover;
+		height: 100vh;
+		background-color: rgba(0,0,0,.5);
+		background-size: cover;
 }
 
 .white_txt {
@@ -10,7 +11,11 @@
   margin-right: 5vw;
   color: white;
   font-size: 30px;
-    
+}
+
+.overlay {
+		background-color: rgba(0,0,0,.3);
+		height: inherit;
 }
 
 .black_txt {
@@ -33,7 +38,7 @@
 }
 
 #About {
-  background-image: url('../media/pont_alex_3v2.jpg');
+			background-image: url('../media/pont_alex_3v2.jpg');
 }
 
 #Events {
