--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -131,17 +131,31 @@
 
 .card_left {
 	margin-left: 20px;
-	margin-right: 20px;
-	align-items: right;
+	margin-right: 35px;
+	align-items: left;
 }
 
 .image_right {
 	margin-top: 20px;
-	border: 5px solid blue;
+	margin-right: 20px;
+	margin-left: 20px;
+	border: 2px solid blue;
+/*	width: 300px;*/
+/*	height: 300px;*/
 }
 
 .image_left {
-	margin-left: 35px;
-	border: 5px solid blue;
-	
+	margin-top: 20px;
+	margin-left: 20px;
+	margin-right: 20px;
+	border: 2px solid blue;
 }
+
+.profile-image:hover .profile_hover {
+	position: absolute;
+	width: 300px;
+	height: 300px;
+	background: transparent url('/media/CHAZAL_Claire.jpg') no-repeat center;
+	cursor: pointer;
+}
+
