--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -82,6 +82,15 @@
 		height: 60px;
 	}
 
+	.drinks {
+		width: 60px;
+		height: 60px;
+	}
+
+	.societies {
+		width: 60px;
+		height: 60px;
+	}
 #Classes {
   	background-image: url('../media/classes3.jpg!d');
 }
