--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -45,7 +45,7 @@
 	margin-left: 5vw;
 	margin-right: 5vw;
   	color: white;
-  	font-size: 30px;
+  	font-size: 25px;
 }
 
 .black_txt {
@@ -54,6 +54,10 @@
 	color: black;
 	font-size: 35px;
 	margin-top: 5vh;
+}
+
+.red_txt {
+	color: red;
 }
 
 .overlay {
@@ -168,11 +172,20 @@
 	border: 2px solid blue;
 }
 
-.profile-image:hover .profile_hover {
+.profile-image_com:hover .profile_hover_com {
 	position: absolute;
 	width: 300px;
 	height: 300px;
 	background: transparent url('/media/CHAZAL_Claire.jpg') no-repeat center;
 	cursor: pointer;
 }
+
+.profile-image_treas:hover .profile_hover_treas {
+	position: absolute;
+	width: 300px;
+	height: 300px;
+	background: transparent url('/media/bernard.jpeg') no-repeat left;
+	cursor: pointer;
+}
+
 
