--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -45,8 +45,8 @@
 	margin-left: 5vw;
 	margin-right: 5vw;
   	color: white;
-  	font-size: 25px;
-	font-size: vw;
+/*  	font-size: 25px;*/
+	font-size: 2vw;
 }
 
 .black_txt {
@@ -76,6 +76,8 @@
 /*Styles by section of content*/
 
 #About {
+	background-size: cover;
+	background-repeat: no-repeat;
 	background-image: url('../media/pont_alex_3v2.jpg');
 }
 
@@ -120,6 +122,7 @@
 
 
 #Le_Journal {
+	background-size: cover;
     background-image: url('https://media.giphy.com/media/l378h7yBiPDAVHIOY/giphy.gif');
 }
 
