--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -74,6 +74,12 @@
 	font-size: 3vh;
 }
 
+@media only screen and (max-width: 600px) {
+    body {
+        font-size: 1vh;
+		font-size: 1vh;
+    }
+}
 /*Styles by section of content*/
 
 #About {
