--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -74,12 +74,19 @@
 	font-size: 3vh;
 }
 
-@media only screen and (max-width: 600px) {
-    body {
+@media only screen and (max-width: 500px) {
+    black_txt {
         font-size: 1vh;
 		font-size: 1vh;
     }
+	
+	white_txt {
+		font-size: 1vh;
+		font-size: 1vh;
+	}
 }
+
+
 /*Styles by section of content*/
 
 #About {
