--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -74,20 +74,17 @@
 	font-size: 3vh;
 }
 
-@media only screen and (max-width: 500px) {
+@media only screen and (max-width: 300px) {
     black_txt {
-        font-size: 1vh;
-		font-size: 1vw;
+        font-size: 2em;
     }
 	
 	white_txt {
-		font-size: 1vh;
-		font-size: 1vw;
+		font-size: 2em;
 	}
 	
 	title {
-		font-size: 2vh;
-		font-size: 2vw;
+		font-size: 3em;
 	}
 }
 
