--- a/css/stylesheet_com.css
+++ b/css/stylesheet_com.css
@@ -23,18 +23,21 @@
     text-align: center;
 }
 .our-team .pic{
-    position: center;
     overflow: hidden;
     transform: scale(1);
     transition: all 0.3s ease 0s;
+	a
+	width: 300px;
+	height: 300px;
+	background-position: 50% 50%;
+	background-repeat: no-repeat;
+	background-size: cover;
 }
 .our-team:hover .pic{
     transform: scale(1.01);
 }
 .our-team .pic:after{
     content: "";
-    width: 200px;
-    height: 200px;
     border-radius: 50%;
     background-color: rgba(0, 0, 0, 0.5);
     box-shadow: 0 0 0 900px rgba(255, 255, 255, 0.5);
