--- a/css/stylesheet_com.css
+++ b/css/stylesheet_com.css
@@ -22,16 +22,10 @@
     background: #f5f5f5;
     text-align: center;
 }
-.our-team .pic{
+.our-team pic{
     overflow: hidden;
     transform: scale(1);
     transition: all 0.3s ease 0s;
-	a
-	width: 300px;
-	height: 300px;
-	background-position: 50% 50%;
-	background-repeat: no-repeat;
-	background-size: cover;
 }
 .our-team:hover .pic{
     transform: scale(1.01);
@@ -54,17 +48,17 @@
     transform: translate3d(0px, 0px, 0px);
 }
 .our-team .pic img{
-    width: 90%;
+    width: 50%;
+	height: 300px;
 	padding-top: 20px;
-    height: auto;
 }
+
 .our-team .read-more{
     text-align: center;
 	font-size-adjust: auto;
 	font-size: 2vr;
 	font-size: 2vh;
-/*	padding: 20px 20px 20px 20px;*/
-	margin: 50px 50px 50px 50px;
+	margin: 0px 25px 0px 25px;
     color: #fff;
     letter-spacing: 0.35px;
     text-align: center;
@@ -96,6 +90,13 @@
     color: #6e6e70;
     text-transform: capitalize;
 }
-@media only screen and (max-width: 990px){
+@media only screen and (max-width: 1300px){
     .our-team{ margin-bottom: 30px; }
+	
+	.our-team .pic img{
+		width: 90%;
+	}
+	.our-team .read-more {
+	font-size: 2vr 2vh;
+	}
 }
