--- a/css/stylesheet_com.css
+++ b/css/stylesheet_com.css
@@ -1,35 +1,41 @@
+/*
 .container_pres {
-	text-align: center;
-	padding-top: 30px;
-/*	padding-bottom: 20px;*/
-	width: 70vw;
-	height: 70vr;
-	margin: auto;
-	width: 80%;
-}
-
-.container {
 	text-align: center;
 	padding-top: 30px;
 	padding-bottom: 20px;
 	width: 70vw;
 	height: 70vr;
+	margin: auto;
+	width: 80%;
+*/
+
+
+/*
+.container {
+	text-align: center;
+	padding-top: 30px;
+	padding-bottom: 20px;
+	width: 90vw;
+	height: 90vr;
 }
+*/
 
 /*New Design Boostrap*/
 
-.our-team{
-    background: #f5f5f5;
-    text-align: center;
-}
+
+/*
 .our-team pic{
-    overflow: hidden;
+    overflow: auto;
     transform: scale(1);
     transition: all 0.3s ease 0s;
 }
+*/
+/*
 .our-team:hover .pic{
     transform: scale(1.01);
 }
+*/
+/*
 .our-team .pic:after{
     content: "";
     border-radius: 50%;
@@ -43,16 +49,33 @@
     transform-origin: 50% 50% 0;
     transition: all 0.35s ease 0s;
 }
+*/
+/*
 .our-team:hover .pic:after{
     opacity: 1;
     transform: translate3d(0px, 0px, 0px);
 }
+*/
+
+.our-team{
+    background: white;
+    text-align: center;
+}
 .our-team .pic img{
-    width: 50%;
-	height: 300px;
-	padding-top: 20px;
+    width: 80%;
+	height: 450px;
+	width: 450px;
+	padding: 25px;
 }
 
+.greetings {
+	font-size: 50px;
+	font-weight: 500;
+	color: darkblue;
+	margin: 20px 0 20px 0;
+	text-align: center;
+}
+/*
 .our-team .read-more{
     text-align: center;
 	font-size-adjust: auto;
@@ -70,16 +93,19 @@
     transform: translate3d(20px, 20px, 0px);
     transition: all 0.35s ease 0s;
 }
+*/
+/*
 .our-team:hover .read-more{
     opacity: 1;
     transform: translate3d(0px, 0px, 0px);
 }
+*/
 .our-team .team-content{
     padding: 20px 0;
 }
 .our-team .title{
     font-size: 30px;
-    font-weight: 700;
+    font-weight: 500;
     color: #3b3b3b;
     text-transform: capitalize;
     margin: 0 0 8px 0;
@@ -90,13 +116,15 @@
     color: #6e6e70;
     text-transform: capitalize;
 }
-@media only screen and (max-width: 1300px){
+@media only screen and (max-width: 2000px){
     .our-team{ margin-bottom: 30px; }
 	
 	.our-team .pic img{
 		width: 90%;
 	}
+/*
 	.our-team .read-more {
 	font-size: 2vr 2vh;
 	}
+*/
 }
