--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,162 +1,171 @@
 /*Navigation bar styles*/
 
 .nav-link:hover {
- 	border-bottom: 2px solid royalblue;
+		border-bottom: 2px solid royalblue;
 }
 .fa {
-	padding: 10px;
-	font-size: 30px;
-	width: 30px;
+		padding: 10px;
+		font-size: 30px;
+		width: 30px;
 }
 .fa-facebook {
-	color: darkgrey;
+		color: darkgrey;
 }
 
 .fa-instagram {
-	color: darkgrey;
+		color: darkgrey;
 }
 
 /*General styles for whole website*/
 
 .full_bg {
-	height: 100vh;
-	background-color: rgba(0,0,0,.5);
-	margin: auto;
+		height: 100vh;
+		background-color: rgba(0,0,0,.5);
+		margin: auto;
 }
 
 .full_bg_news {
-	height: 50vh;
-	background-size: cover;
-	background-color: white;
+		height: 60%;
+		background-size: cover;
+		background-color: white;
+		padding-top: 5px;
 }
 
 .full_bg_spons: {
-	height: 80vh;
-	background-size: cover;
-	background-color: white;
+		height: 80vh;
+		background-size: cover;
+		background-color: white;
 }
 
 .white_txt {
-	margin-left: 5vw;
-	margin-right: 5vw;
-  	color: white;
-	font-size: 3vw;
-	font-size: 3vh;
+		margin-left: 5vw;
+		margin-right: 5vw;
+		color: white;
+		font-size: 3vw;
+		font-size: 3vh;
 }
 
 .black_txt {
-	margin-left: 5vw;
-	margin-right: 5vw;
-	color: black;
-	font-size: 3vw;
-	font-size: 3vh;
-	margin-top: 10px;
-	align-content: center;
+		margin-left: 5vw;
+		margin-right: 5vw;
+		color: black;
+		font-size: 2vw;
+		font-size: 2vh;
+		margin-top: 7px;
+		text-align: center;
 }
 
 .red_txt {
-	color: red;
+		color: red;
 }
 
 .overlay {
-	background-color: rgba(0,0,0,.3);
-	height: inherit;
-	background-size: cover;
+		background-color: rgba(0,0,0,.3);
+		height: inherit;
+		background-size: cover;
 }
 
 .card-bg-primary {
-	width: 400px;
-	height: 400px;
-	color: aqua;
-	box-shadow: 20px 10px 10px aqua;
+		width: 400px;
+		height: 400px;
+		color: aqua;
+		box-shadow: 20px 10px 10px aqua;
 }
 
 .section-widget-title {
-	font-size: 3vw;
-	font-size: 3vh;
+		font-size: 3vw;
+		font-size: 3vh;
 }
 
 @media only screen and (max-width: 300px) {
-    black_txt {
-        font-size: 2em;
-    }
-	
-	white_txt {
-		font-size: 2em;
-	}
-	
-	title {
-		font-size: 3em;
-	}
-	
-	
+		black_txt {
+				font-size: 2em;
+		}
+
+		white_txt {
+				font-size: 2em;
+		}
+
+		title {
+				font-size: 3em;
+		}
 }
 
 
 /*Styles by section of content*/
 
 #About {
-	background-size: 100% 100%;
-	background-repeat: no-repeat;
-	background-image: url('../media/cover/pont_alex_3v2.jpg');
+		background-size: 100% 100%;
+		background-repeat: no-repeat;
+		background-image: url('../media/cover/pont_alex_3v2.jpg');
 }
 
 #Events {
-	background-size: 100% 100%;
-	background-repeat: no-repeat;
-  	background-image: url('../media/cover/events1.jpg');
+		background-size: 100% 100%;
+		background-repeat: no-repeat;
+		background-image: url('../media/cover/events1.jpg');
 }
 
-	.podium {
+.image_size {
+		width: 100vw;
+		height: 100vh;
+}
+
+.podium {
 		width: 60px;
 		height: 60px;
-	}
+}
 
-	.drinks {
+.drinks {
 		width: 60px;
 		height: 60px;
-	}
+}
 
-	.societies {
+.societies {
 		width: 60px;
 		height: 60px;
-	}
+}
 
-	.white_txt_events {
+.white_txt_events {
 		margin-left: 5vw;
 		margin-right: 5vw;
 		color: white;
-	/*  	font-size: 25px;*/
+		/*  	font-size: 25px;*/
 		font-size: 2vw;
 		font-size: 2vh;
-	}
+}
+
 
 #Classes {
-	background-size: 100% 100%;
-	background-repeat: no-repeat;
-  	background-image: url('../media/cover/classes.jpg!d');
-	}
+		background-size: 100% 100%;
+		background-repeat: no-repeat;
+		background-image: url('../media/cover/classes.jpg');
+}
 
-	.tbody {
+.tbody {
 		text-align: center;
-	}
+}
 
-	.table {
+.table {
 		display: table;
 		border-collapse: separate;
 		border-spacing: 2px;
 		border-color: black;
-	}
+}
 
 #Sign-up {
 		background-color: white;
-	}
+}
 
+.box {
+	border: 10px solid blue;
+	margin: 8%;
+}
 
 #Le_Journal {
-	background-size: 100% 100%;
-	background-repeat: no-repeat;
-    background-image: url('https://media.giphy.com/media/l378h7yBiPDAVHIOY/giphy.gif');
+		background-size: 100% 100%;
+		background-repeat: no-repeat;
+		background-image: url('https://media.giphy.com/media/l378h7yBiPDAVHIOY/giphy.gif');
 }
 
 /*#Sponsors*/
@@ -165,7 +174,14 @@
 /*#Newsletter*/
 
 .div.mc-field-group label {
-	text-align: center;
-	padding-bottom: 4px;
-	font-size: 4px;
+		text-align: center;
+		padding-bottom: 4px;
+		font-size: 4px;
+}
+
+@media only screen and (max-width: 300px) {
+		.div.mc-field-group label {
+				font-size: 2px;
+				text-align: center;
+				padding-bottom: 2px;
 }
